# gsoc_2022

./: README.md  main.c  meson.build  meson_options.txt  wordstat.c  wordstat.h
